fix bpm counter alignment

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -342,7 +342,7 @@ input {
 
 #interface {
 	font-family: 'Noto Sans', sans-serif;
-	width: 370px;
+	width: 380px;
 	height: 10px;
 	margin-left: auto;
 	margin-right: auto;
